tests/NormalTests/paczka1/fuzzy1/74186228.err
Error in line 3: 1zge4 A667 94,7
Error in line 4: 1zge4 A881 7,9
Error in line 12: I6o6i476ip A881 13,6
Error in line 6: vnOqM9Unwlr A667 26,0
Error in line 16: usJFV A881 20,2
Error in line 24: usJFV A667 100,0
Error in line 28: vnOqM9Unwlr A479 84,4
Error in line 35: 1zge4 A479 57,1
